<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="lg_usrn">Username</string>
    <string name="lg_pswd">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="login">Password</string>
    <string name="lg_usrn_samp">Your username</string>
    <string name="lg_pswd_samp">Your password</string>
    <string name="confirm_samp">Reenter the password</string>
    <string name="app_name">PhotoDiary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">PhotoDiary</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="user_name">Username</string>
    <string name="re_password">Re-enter Password</string>
    <string name="email">Email</string>
    <string name="title_activity_set_password">SetPasswordActivity</string>
    <string name="new_pwd">New Password</string>
    <string name="old_pwd">Old Password</string>
    <string name="new_pwd_confirm">Reenter Password</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    
    <string name="goToMain">Go Back</string>
    <string name="aboutUs">
        \nWe are aiming to help us figure out how many places them they have been!\n\n
        Version: 1.00v\n\n
        This APP is designed by:\n
         Zhenyu Han\n
         Boyang An\n
         Jerry Wang\n
         Zehua Shao\n
        
        </string>

</resources>
