<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/startup"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:id="@+id/linearLayout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/textView_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:text="@string/user_name"
            />

        <EditText
            android:id="@+id/editText_register_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:inputType="text"
            android:maxLength="12"
            android:singleLine="true" 
            />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout_pswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@+id/linearLayout_login"
        >

        <TextView
            android:id="@+id/textView_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:text="@string/password"
            />

        <EditText
            android:id="@+id/editText_register_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:maxLength="12"
            android:singleLine="true" 
            />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout_re_pswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@+id/linearLayout_pswd"
        >

        <TextView
            android:id="@+id/textView_re_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:text="@string/re_password"
            />

        <EditText
            android:id="@+id/editText_register_re_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:maxLength="12"
            android:singleLine="true" 
            />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@+id/linearLayout_re_pswd"
        >

        <TextView
            android:id="@+id/textView_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:text="@string/email"
            />

        <EditText
            android:id="@+id/editText_register_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:singleLine="true" 
            />
    </LinearLayout>
    <TextView
            android:id="@+id/textView_register_warning"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout_email"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="20sp"
            />
    
     <Button
            android:id="@+id/btn_register_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_register_warning"
            android:text="@string/btn_register" />
    <Button
            android:id="@+id/btn_register_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_register_register"
            android:text="@string/btn_cancel" />

</RelativeLayout>