<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.clustering.SetPasswordActivity" >

    <LinearLayout
        android:id="@+id/linearLayout_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/textView_setpwd_oldpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:text="@string/old_pwd" />

        <EditText
            android:id="@+id/editText_setpwd_oldpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:maxLength="12"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout_old_password"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/textView_setpwd_newpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:text="@string/new_pwd" />

        <EditText
            android:id="@+id/editText_setpwd_newpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:maxLength="12"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_re_newpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout_new_password"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/textView_setpwd_re_newpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:text="@string/new_pwd_confirm" />

        <EditText
            android:id="@+id/editText_setpwd_re_newpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:maxLength="12"
            android:singleLine="true" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_setpwd_warning"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout_re_newpassword"
        android:gravity="center"
        android:textColor="@color/red"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_setpwd_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_setpwd_warning"
        android:text="@string/reset_pwd" />

    <Button
        android:id="@+id/btn_setpwd_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_setpwd_confirm"
        android:text="@string/btn_cancel" />

</RelativeLayout>